--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,74 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
 
 :root.theme-light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #FFF1F7;
+  --title-color: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --text-color: #353430;
+  --button-decor: #353430;
+  --description-color: #000;
+  --main-text: "IBM Plex Mono", "monospace";
+  --bg-header: url("../images/cover-image-light.png");
+  --decor-visibility: hidden;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme_light .decor {
+  visibility: hidden;
+}
+
+
+.theme_light .header__theme-menu-button:hover {
+  outline: outline: 1px solid rgba(var(--button-decor, 53, 52, 48, 1), 0.4);
+  cursor: pointer;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #FFF1F7;
+    --title-color: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --text-color: #353430;
+    --description-color: #000;
+    --main-text: "IBM Plex Mono";
+  }
+
+  .page {
+    --bg-header: url("../images/cover-image-light.png");
+  }
+
+  .decor {
+    visibility: var(--decor-visibility, hidden);
+  }
+
+  .header__theme-menu-button_active {
+    outline: 1px solid var(--button-decor, #353430)
+  }
+
+  .header__theme-menu-button:hover {
+      outline: 1px solid rgba(var(--button-decor, 53, 52, 48), 0.4);
+    }
+    
+    .header__theme-menu-button:focus {
+      outline: none;
+    }
+    
+    .header__theme-menu-button:focus-visible {
+      border-bottom: 1px solid var(--button-decor, #353430);
+    }
+
+    .header__theme-menu-button {
+      color: var(--text-color, #353430);
+  }
+
+  .decorated-zone::before {
+    border-block-start: 1px solid var(--button-decor, #353430);
+    border-inline-end: 1px solid var(--button-decor, #353430);
+  }
+  .decorated-zone::after {
+    border-block-end: 1px solid var(--button-decor, #353430);
+    border-inline-start: 1px solid var(--button-decor, #353430);
+  }
 }
