--- a/styles/style.css
+++ b/styles/style.css
@@ -15,16 +15,16 @@
 
 .header {
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto 1fr;
-  justify-content: end;
-  align-items: center;
+  inline-size: 100%;
+  block-size: 100vh;
   min-height: 668px;
   margin-block-end: 11%;
   padding: 10px;
-  inline-size: 100%;
-  block-size: 100vh;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 1fr;
+  justify-content: end;
+  align-items: center;
 }
 
 .decor {
@@ -76,6 +76,7 @@
 .header__title {
   color: var(--title-color, #db00ff);
   font-size: var(--title-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
+  font-weight: var(--bold-font, 700);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--accent-color);
 }
@@ -87,9 +88,8 @@
 }
 
 .header__description {
-  margin-block-end: 20px;
   margin-block-end: clamp(66px, 5vw + 20px, 134px);
-  padding-inline-end: 14px;
+  padding-inline-end: 14%;
   color: var(--bg-color, #000028);
   font-weight: var(--bold-font);
   font-size: 18px;
@@ -99,12 +99,13 @@
 
 .header__theme-menu {
   justify-self: end;
-  align-content: end;
+  margin-block: 65px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
+  align-self: end;
   gap: 13px;
   list-style: none; 
 }
@@ -118,6 +119,7 @@
   background-color: var(--bg-button, transparent);
   cursor: pointer;
   appearance: none;
+  font-size: var(--font-size, 18px);
 }
 
 .header__theme-menu-button_active {
@@ -126,6 +128,7 @@
 
 .header__theme-menu-button:hover {
   outline: 1px solid rgba(var(--accent-color, 255, 0, 112), 0.4);
+  cursor: pointer;
 }
 
 .header__theme-menu-button:focus {
@@ -139,6 +142,8 @@
 .section {
   display: grid;
   gap: 20px;
+  padding: 0 10px 0 10px;
+  margin-block-end: 50px;
 }
 
 .section__title {
@@ -172,7 +177,7 @@
   text-shadow: 2px 1px 0 var(--accent-color, #ff0070);
 }
 
-.card__link:hover{
+.card__link:hover {
   border-bottom: 1px solid currentColor;
 }
 
@@ -189,7 +194,7 @@
   gap: 10px;
 } 
 
-.section-img img{
+.section-img img {
   object-fit: cover;
   object-position: center;
   inline-size: 100%;
@@ -256,7 +261,6 @@ ul {
 
   .header__description-block {
     justify-self: end;
-    align-self: center;
     max-inline-size: 364px;
   }
 
@@ -271,9 +275,7 @@ ul {
 
   .section-items {
     grid-template-columns: 1fr;
-  }
-
-  
+  }  
 
   .section-howto {
     grid-template-columns: 1fr 1fr;
@@ -323,6 +325,7 @@ ul {
   .header {
     margin-block-end: 6%;
   }
+
   .header__theme-menu {
     justify-self: center;
     margin-inline-start: 20px;
@@ -334,9 +337,7 @@ ul {
     flex-direction: row;
   }
 
-  .header__description-block {
-    min-inline-size: 50%;
-  }
+  
 
   .section-items {
     grid-template-columns: repeat(3, 1fr);
