--- a/styles/light.css
+++ b/styles/light.css
@@ -1,9 +1,4 @@
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
   --bg-color: #FFF1F7;
   --title-color: #FFC2E6;
   --accent-color: #FF8DCB;
@@ -15,10 +10,14 @@
   --decor-visibility: hidden;
 }
 
-.theme_light .decor {
-  visibility: hidden;
+.theme_light .page {
+  background-color: var(--bg-color, #FFF1F7);
+  background-image: var(--bg-header, url("../images/cover-image-light.png"));
 }
 
+.theme_light .decor {
+  visibility: var(--decor-visibility, hidden);
+}
 
 .theme_light .header__theme-menu-button:hover {
   outline: 1px solid rgba(var(--button-decor, 53, 52, 48, 1), 0.4);
@@ -31,14 +30,26 @@
     --title-color: #FFC2E6;
     --accent-color: #FF8DCB;
     --text-color: #353430;
+    --section-title: #353430;
     --description-color: #000;
-    --main-text: "IBM Plex Mono";
+    --main-text: "IBM Plex Mono", "monospace";
+    --bg-header: url("../images/cover-image-light.png");
+
   }
 
   .page {
-    --bg-header: url("../images/cover-image-light.png");
-    --text-color: #353430; 
+    background-image: var(--bg-header, url("../images/cover-image-light.png"));
+    color: var(--text-color, #353430);
   }
+
+  .section__title {
+    color: var(--section-title, #353430);
+  }
+
+  .title-decor {
+    color: var(--section-title, #353430);
+  }
+
 
   .decor {
     visibility: var(--decor-visibility, hidden);
