--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,9 @@
 
 .page {
   position: relative;
-  padding: clamp(10px, 2vw + 5px, 20px);
   font-family: var(--main-text, "IBM Plex Mono");
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background-color: var(--bg-color, #000028);
-  background-image: url(../images/cover-image-dark.png);
+  background-image: url("../images/cover-image-dark.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -15,22 +13,23 @@
 
 .header {
   position: relative;
-  inline-size: 100%;
-  block-size: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr auto 1fr;
+  justify-content: end;
+  align-items: center;
   min-height: 668px;
   margin-block-end: 11%;
   padding: 10px;
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-columns: 1fr;
-  justify-content: end;
-  align-items: center;
+  inline-size: 100%;
+  block-size: 100vh;
+
 }
 
 .decor {
   position: absolute;
-  top: 2.5%;
-  right: 5%;
+  top: 10px;
+  right: 38px;
   color: var(--accent-color, #ff0070);
   font-size: 18px;
   text-transform: uppercase;
@@ -51,7 +50,7 @@
   border-radius: 50%;
   box-shadow: 0 0 4px var(--accent-color, #ff0070);
   background-color: var(--accent-color, #ff0070);
-  inline-size: 9px; 
+  inline-size: 9px;
   block-size: 9px;
 }
 
@@ -75,39 +74,39 @@
 
 .header__title {
   color: var(--title-color, #db00ff);
+  font-weight: var(--accent-font, 700);
   font-size: var(--title-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
-  font-weight: var(--bold-font, 700);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
 .title-decor {
   padding-inline-end: 14%;
+  font-weight: var(--acceent-font, 700);
   background-color: var(--accent-color, #ff0070);
   block-size: auto;
 }
 
 .header__description {
-  margin-block-end: clamp(66px, 5vw + 20px, 134px);
   padding-inline-end: 14%;
   color: var(--bg-color, #000028);
-  font-weight: var(--bold-font);
   font-size: 18px;
-  line-height: 130%;
   block-size: auto;
+}
+
+.description:last-child {
+  margin-block-end: 0;
 }
 
 .header__theme-menu {
   justify-self: end;
-  margin-block: 65px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  align-self: end;
   gap: 13px;
-  list-style: none; 
+  list-style-type: none;
 }
 
 .header__theme-menu-button {
@@ -115,11 +114,11 @@
   padding: 2px 13px;
   outline: 0px;
   color: var(--accent-color, #ff0070);
+  font-size: var(--font-size, 18px);
   text-transform: lowercase;
   background-color: var(--bg-button, transparent);
   cursor: pointer;
   appearance: none;
-  font-size: var(--font-size, 18px);
 }
 
 .header__theme-menu-button_active {
@@ -142,8 +141,8 @@
 .section {
   display: grid;
   gap: 20px;
-  padding: 0 10px 0 10px;
   margin-block-end: 50px;
+  padding: 0 10px 0 10px;
 }
 
 .section__title {
@@ -154,15 +153,17 @@
 
 .section__subtitle {
   color: var(--bg-color, #000028);
-  font-weight: var(--bold-font);
+  font-weight: var(--accent-font);
 }
 
 .card__title {
+  margin-block-end: 10px;
   color: var(--bg-color, #000028);
   font-size: var(--font-size, 18px);
 }
 
 .card__subtitle {
+  margin-block-end: 10px;
   color: var(--bg-color, #000028);
   font-weight: var(--regular-font, 400);
 }
@@ -192,7 +193,7 @@
 .section-img {
   display: grid;
   gap: 10px;
-} 
+}
 
 .section-img img {
   object-fit: cover;
@@ -232,6 +233,14 @@ ul {
   .header {
     grid-template-rows: 1fr auto 1fr;
     margin-block-end: 8%;
+    padding: 20px;
+  }
+
+  .header__title {
+    position: relative;
+    left: -20px;
+    justify-self: start;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .decorated-zone::before {
@@ -261,7 +270,12 @@ ul {
 
   .header__description-block {
     justify-self: end;
+    align-self: center;
     max-inline-size: 364px;
+  }
+
+  .section__title {
+    max-width: 236px;
   }
 
   .section-reasons {
@@ -275,17 +289,17 @@ ul {
 
   .section-items {
     grid-template-columns: 1fr;
-  }  
-
-  .section-howto {
-    grid-template-columns: 1fr 1fr;
   }
 
-  .section-img img { 
+  .section-howto {
+    grid-template-columns: 35% 65%;
+  }
+
+  .section-img img {
     display: block;
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .section-img:first-child {
@@ -319,25 +333,38 @@ ul {
     min-inline-size: 35%;
   }
 
+  .section-howto .card__title {
+    margin-block-end: 20px;
+  }
+
+  .card__content {
+    margin-block-end: 20px;
+  }
 }
 
 @media (width >=1024px) {
+
   .header {
+    grid-template-rows: 40% 20% 40%;
     margin-block-end: 6%;
+  }
+
+  .header__description-block {
+    min-inline-size: 50%;
+  }
+
+  .header__description {
+    padding: 0;
   }
 
   .header__theme-menu {
     justify-self: center;
-    margin-inline-start: 20px;
-    margin-block-start: 0;
-    margin-block-end: 215px;
+    align-self: start;
   }
-  
+
   .header__theme-menu-list {
     flex-direction: row;
   }
-
-  
 
   .section-items {
     grid-template-columns: repeat(3, 1fr);
