--- a/styles/style.css
+++ b/styles/style.css
@@ -145,6 +145,10 @@
   padding: 0 10px 0 10px;
 }
 
+.section:last-child {
+  gap: 20px;
+}
+
 .section__title {
   color: var(--accent-color, #ff0070);
   font-size: var(--font-size, 18px);
@@ -173,6 +177,10 @@
   color: var(--text-color, #f1b2ce);
   line-height: 130%;
   margin-block-end: 20px;
+}
+
+.card__content:last-child {
+  margin-block-end: 0px;
 }
 
 .card__link {
@@ -293,6 +301,7 @@ ul {
 
   .section-items {
     grid-template-columns: 1fr;
+    gap: 20px;
   }
 
   .section-howto {
