--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@
 }
 
 .card__title {
-  margin-block-end: 10px;
+  margin-block-end: 20px;
   color: var(--bg-color, #000028);
   font-size: var(--font-size, 18px);
 }
@@ -255,12 +255,16 @@ ul {
     position: relative;
     left: -20px;
     justify-self: start;
+  }
+
+  .header__title, 
+  .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .section {
     display: grid;
-    margin-block-end: 80px;
+    margin-block-end: 70px;
     padding: 0 20px 0 20px;
   }
 
