--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,10 @@
 
 .page {
   position: relative;
-  font-family: var(--main-text, "IBM Plex Mono");
+  font-family: var(--main-text, "IBM Plex Mono", "monospace");
   font-size: var(--font-size, 18px);
-  background-color: var(--bg-color, #000028);
-  background-image: url("../images/cover-image-dark.png");
+  background-color: var(--bg-color);
+  background-image: var(--bg-image, url(../images/cover-image-dark.png));
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -31,7 +31,7 @@
   position: absolute;
   top: 10px;
   right: 38px;
-  color: var(--accent-color, #ff0070);
+  color: var(--accent-color);
   font-size: 18px;
   text-transform: uppercase;
 }
@@ -49,15 +49,15 @@
   right: -19px;
   margin-block-start: 7px;
   border-radius: 50%;
-  box-shadow: 0 0 4px var(--accent-color, #ff0070);
-  background-color: var(--accent-color, #ff0070);
+  box-shadow: 0 0 4px 2px var(--decor-color, #ff0070);
+  background-color: var(--decor-color, #ff0070);
   inline-size: 9px;
   block-size: 9px;
 }
 
 .decorated-zone::before {
-  border-inline-end: 1px solid var(--accent-color, #ff0070);
-  border-block-start: 1px solid var(--accent-color, #ff0070);
+  border-inline-end: 1px solid var(--decor-color, #ff0070);
+  border-block-start: 1px solid var(--decor-color, #ff0070);
   inset-inline-end: 10px;
   inset-block-start: 10px;
   block-size: 25px;
@@ -65,8 +65,8 @@
 }
 
 .decorated-zone::after {
-  border-inline-start: 1px solid var(--accent-color, #ff0070);
-  border-block-end: 1px solid var(--accent-color, #ff0070);
+  border-inline-start: 1px solid var(--active-button-color, #ff0070);
+  border-block-end: 1px solid var(--active-button-color, #ff0070);
   inset-inline-start: 10px;
   inset-block-end: 10px;
   block-size: 25px;
@@ -74,11 +74,11 @@
 }
 
 .header__title {
-  color: var(--title-color, #db00ff);
+  color: var(--title-color, #DB00FF);
   font-weight: var(--accent-font, 700);
   font-size: var(--title-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
   line-height: 82.5%;
-  text-shadow: 4px 4px 0 var(--accent-color);
+  text-shadow: 4px 4px 0 var(--accent-color, #FF0070);
 }
 
 .title-decor {
@@ -89,7 +89,7 @@
 
 .header__description {
   padding-inline-end: 14%;
-  color: var(--bg-color, #000028);
+  color: var(--heading-color, #000028);
   font-size: 18px;
   block-size: auto;
 }
@@ -113,7 +113,7 @@
   border: none;
   padding: 2px 13px;
   outline: 0px;
-  color: var(--accent-color, #ff0070);
+  color: var(--decor-color, #ff0070);
   font-size: var(--font-size, 18px);
   text-transform: lowercase;
   background-color: var(--bg-button, transparent);
@@ -122,11 +122,11 @@
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--accent-color, #ff0070);
+  outline: 1px solid var(--decor-color, #ff0070);
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid rgba(var(--accent-color, 255, 0, 112), 0.4);
+  outline: 1px solid var(--hover-button-color);
   cursor: pointer;
 }
 
@@ -135,30 +135,30 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--accent-color, #ff0070);
+  border-bottom: 1px solid var(--decor-color, #ff0070);
 }
 
 .section {
-  display: grid;
-  margin-block-end: 50px;
   padding: 0 10px 0 10px;
-  gap: 20px;
+  margin-block-end: 50px;
 }
 
-.section:last-child {
-  margin-block-end: 30px;
-  gap: 10px;
+.section__card:not(:last-child) {
+  margin-block-end: 20px;
 }
 
 .section__title {
-  color: var(--accent-color, #ff0070);
+  color: var(--heading-color, #ff0070);
   font-size: var(--font-size, 18px);
   line-height: 130%;
+  margin-block-end: 20px;
 }
 
 .section__subtitle {
-  color: var(--bg-color, #000028);
+  color: var(--heading-color, #000028);
   font-weight: var(--accent-font);
+  margin-block-end: 20px;
+  font-size: var(--font-size, 18px);
 }
 
 .section-items {
@@ -167,21 +167,27 @@
 }
 
 .card__title {
-  margin-block-end: 20px;
-  color: var(--bg-color, #000028);
+  margin-block-end: 10px;
+  color: var(--heading-color, #000028);
   font-size: var(--font-size, 18px);
 }
 
 .card__subtitle {
-  margin-block-end: 10px;
-  color: var(--bg-color, #000028);
-  font-weight: var(--regular-font, 400);
+  margin-block-end: 20px;
+  color: var(--heading-color, #000028)
+}
+
+.section-howto h4 {
+  font-weight: var(--main-font);
+  color: var(--heading-color, #000028)
 }
 
 .card__content {
-  color: var(--text-color, #f1b2ce);
-  line-height: 130%;
   margin-block-end: 20px;
+  color: var(--text-color, #f1b2ce);
+  font-size: 18px;
+  font-weight: var(--main-font);
+  line-height: 130%;
 }
 
 .card__content:last-child {
@@ -206,14 +212,23 @@
   outline: 1px solid currentColor;
 }
 
-.section-img {
+.section__img {
   display: grid;
+  gap: 10px;
 }
 
-.section-img img {
+.section__img img {
   object-fit: cover;
   object-position: center;
   inline-size: 100%;
+}
+
+.section-img .section__subtitle {
+  margin-block-end: 10px;
+}
+
+.section.section-img {
+  margin-block-end: 40px;
 }
 
 .footer {
@@ -229,22 +244,6 @@
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 var(--accent-color);
-}
-
-h2,
-h3,
-ul {
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
-  list-style-type: none;
-  unicode-bidi: normal;
-}
-
-.section section-img {
-  margin-block-end: 40px;
 }
 
 
@@ -269,13 +268,21 @@ ul {
 
   .section {
     display: grid;
-    margin-block-end: 60px;
+    margin-block-end: 80px;
     padding: 0 20px 0 20px;
   }
 
-  .section:last-child {
-    margin-block-end: 30px;
+  .section.section-img {
+    margin-block-end: 60px;
+  }
+
+  .section-img .section__subtitle {
+    margin-block-end: 20px;
+  }
+
+  .section__img {
     gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .decorated-zone::before {
@@ -313,21 +320,17 @@ ul {
     max-inline-size: 236px;
   }
 
-  .section-reasons {
+  .section:nth-child(odd) .section__title {
+    margin-block-end: 0;
+  }
+
+  .section:nth-child(odd) {
+    display: grid;
     grid-template-columns: 35% 65%;
   }
 
   .section-title-resons {
     grid-row: 1 / span 2;
-  }
-
-  .section-items {
-    grid-template-columns: 1fr;
-    gap: 20px;
-  }
-
-  .section-howto {
-    grid-template-columns: 35% 65%;
   }
 
   .section-img img {
@@ -337,29 +340,29 @@ ul {
     object-fit: cover;
   }
 
-  .section-img:first-child {
+  .section__image:first-child {
     grid-column: 1 / 3;
   }
 
-  .section-img:nth-child(2) {
+  .section__image:nth-child(2) {
     grid-row: 1 / 3;
     width: 100%;
     height: 100%;
   }
 
-  .section-img:nth-child(3) {
+  .section__image:nth-child(3) {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
     width: 100%;
     height: 100%;
   }
 
-  .section-img:nth-child(4) {
+  .section__image:nth-child(4) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
 
-  .section-img:nth-child(5) {
+  .section__image:nth-child(5) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
@@ -368,9 +371,6 @@ ul {
     margin-block-end: 20px;
   }
 
-  .section section-img {
-    margin-block-end: 60px;
-  }
 
 }
 
@@ -399,12 +399,13 @@ ul {
   }
 
   .section-items {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
   }
 
-  .section-howto {
-    grid-template-columns: 1fr 2fr;
+  .section:nth-child(odd) {
+    grid-template-columns: 34% 66%;
   }
 
   .section-reasons {
