--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,14 +1,14 @@
 :root {
   --bg-color: #000028;
-  --title-color: #db00ff;
-  --accent-color: #ff0070;
-  --text-color: #f1b2ce;
-  --description-color: #000;
-  --main-text: "IBM Plex Mono", "monospace";
-  --font-size: 18px;
-  --bg-header: url("../images/cover-image-dark.png");
+  --title-color: #DB00FF; 
+  --accent-color: #FF0070; 
+  --decor-color: #FF0070;
+  --heading-color: #000028;
   --bg-button: transparent;
+  --text-color: #f1b2ce;
+  --hover-button-color: rgba(255, 0, 112, 0.4); 
+  --main-font-family: "IBM Plex Mono", "monospace";
+  --main-font: 400;
   --accent-font: 700;
-  --regular-font: 400;
   --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
