--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,8 +4,9 @@
   --accent-color: #FF0070;
   --decor-color: #FF0070;
   --heading-color: #000028;
+  --section-title-color: #FF0070;
   --bg-button: transparent;
-  --text-color: #f1b2ce;
+  --text-color: #F1B2CE;
   --hover-button-color: rgba(255, 0, 112, 0.4);
   --main-font-family: "IBM Plex Mono", "monospace";
   --main-font: 400;
