--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,12 +4,42 @@
   --accent-color: #FF0070;
   --decor-color: #FF0070;
   --heading-color: #000028;
+  --section-title-color: #FF0070;
   --bg-button: transparent;
-  --text-color: #f1b2ce;
+  --text-color: #F1B2CE;
   --hover-button-color: rgba(255, 0, 112, 0.4);
   --bg-image: url(../images/cover-image-dark.png);
 }
 
+.theme-dark .page {
+  background-image: var(--bg-image);
+}
+
 .theme-dark .decor {
-  visibility: visible;
+  visibility: hidden;
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000028;
+    --title-color: #DB00FF;
+    --accent-color: #FF0070;
+    --decor-color: #FF0070;
+    --heading-color: #000028;
+    --bg-button: transparent;
+    --text-color: #f1b2ce;
+    --hover-button-color: rgba(255, 0, 112, 0.4);
+    --bg-image: url(../images/cover-image-dark.png);
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+
+  .decor {
+    visibility: visible;
+  }
+
 }
