--- a/styles/light.css
+++ b/styles/light.css
@@ -4,6 +4,7 @@
   --accent-color: #FF8DCB;
   --decor-color: #353430;
   --heading-color: #353430;
+  --section-title-color: #353430;
   --hover-button-color: rgba(50, 49, 45, 0.4);
   --text-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
