--- a/styles/dark.css
+++ b/styles/dark.css
@@ -26,6 +26,7 @@
     --accent-color: #FF0070;
     --decor-color: #FF0070;
     --heading-color: #000028;
+    --section-title-color: #FF0070;
     --bg-button: transparent;
     --text-color: #f1b2ce;
     --hover-button-color: rgba(255, 0, 112, 0.4);
